# c2man

./: CMakeLists.txt
libc/: CMakeLists.txt
